executor, update asset checks
